// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty should render prop set description correctly 1`] = `
<div class="fx-empty"><img src="https://cdn.fox2.cn/vfox/empty/default@2x.png" class="fx-empty_image">
  <p class="fx-empty_description">
    description
  </p>
</div>
`;

exports[`Empty should render set image slot correctly 1`] = `
<div class="fx-empty">
  <div class="fx-image"><i class="fx-image_loading"><svg aria-hidden="true" class="fx-icon">
        <use xlink:href="#icon-ImageOutlined"></use>
      </svg></i></div>
  <p class="fx-empty_description">
    description
  </p>
</div>
`;
